<?xml version="1.0" encoding="utf-8"?>
<!--Generated by crowdin.com-->
<resources>
  <string name="one_account_allowed">هر کاربر فقط یک حساب کاربری می‌تواند داشته باشد</string>
  <string name="or">أو</string>
  <string name="username">البريد الإلكتروني</string>
  <string name="password">گذرواژه</string>
  <string name="link_device_webinstall">اتصال حساب کاربری به Webinstall</string>
  <string name="register">التسجيل</string>
  <string name="login">تسجيل الدخول</string>
  <string name="successful">موفق</string>
  <string name="login_successful">ورود موفق</string>
  <string name="forgot_passwd">پسورد را فراموش کرده اید؟</string>
  <string name="fields_cannot_empty">لطفاً ایمیل و رمز خود را چک کنید.</string>
  <string name="unknown_error">خطای نامشخص</string>
  <string name="accept_terms">تکمیل ثبت نام به منزله پذیرفتن شرایط استفاده و
    ضوابط محتوایی توسعه‌دهنده‌های اپ‌توید است
  </string>
  <string name="no_email_and_pass_error_message">لطفاً برای ثبت نام ایمیل و رمز خود را وارد کنید
  </string>
  <string name="no_pass_error_message">لطفاً برای ثبت نام یک رمز عبور وارد کنید.</string>
  <string name="no_email_error_message">لطفاً برای ثبت نام یک ایمیل وارد کنید.</string>
  <string name="password_validation_text">\"رمز شما باید حداقل 8 شناسه داشته باشد
    و حداقل شامل یک حرف و یک عدد یا شناسه‌های خاص (!@#$%*) باشد.
    \"
  </string>
  <string name="logged_as">شما به عنوان .... وارد شده اید</string>
  <string name="sign_out">خروج</string>
  <string name="default_account_type">cm.aptoide.pt</string>
  <string name="facebook_grant_permission_button">تایید دسترسی</string>
  <string name="facebook_email_permission_regected_message">\"ما به ایمیل شما نیاز دارید برای ساخت
    یک
    حساب کاربری
    \"
  </string>
  <string name="user_cancelled">انصراف توسط کاربر</string>
  <!--errors-->
  <string name="error_occured">خطایی رخ داده است، لطفا دوباره سعی کنید.</string>
  <string name="error_invalid_grant">شناسه کاربری و رمز عبور با هم مطابقت ندارند</string>
  <string name="ws_error_MARG_200">\@رشته/خطایی رخ داده است</string>
  <string name="ws_error_MARG_203">\@رشته/خطایی رخ داده است</string>
  <string name="ws_error_MARG_204">\@رشته/خطایی رخ داده است</string>
  <string name="ws_error_IARG_200">\@رشته/خطایی رخ داده است</string>
  <string name="ws_error_AUTH_2">مشخصات ورودی نامعتبر است!</string>
  <string name="ws_error_AUTH_7">\@رشته/خطایی رخ داده است</string>
  <string name="ws_error_AUTH_100">خطایی در ورود با حساب گوگل رخ داده است. لطفا حساب گوگل خود را چک
    کنید (ممکن است لازم باشد ایمیل خود را دوباره تایید کنید)
  </string>
  <string name="ws_error_AUTH_101">ورود با گوگل ممکن نیست. لطفاً دوباره تلاش کنید.</string>
  <string name="ws_error_AUTH_102">خطایی در ورود با حساب فیسبوک رخ داده است. لطفا حساب فیسبوک خود را
    چک کنید (ممکن است لازم باشد ایمیل خود را دوباره تایید کنید)
  </string>
  <string name="ws_error_AUTH_103">ورود با فیسبوک ممکن نیست. لطفا دوباره تلاش کنید.</string>
  <string name="ws_error_invalid_grant">شناسه کاربری و رمز عبور با هم مطابقت ندارند</string>
  <string name="ws_error_MARG_12">پارامتر مربوط به کد hmac پیدا نشد</string>
  <string name="ws_error_MARG_109">پارامتر ایمیل پیدا نشد</string>
  <string name="ws_error_MARG_110">پارامتر passhash پیدا نشد</string>
  <string name="ws_error_MARG_111">پارامتر نام پیدا نشد</string>
  <string name="ws_error_MARG_112">پارامتر User-Agent پیدا نشد</string>
  <string name="ws_error_IARG_5">فرمت hmac اشتباه است</string>
  <string name="ws_error_IARG_106">ایمیل وارد شده نامعتبر است</string>
  <string name="ws_error_IARG_111">فرمت passhash نامعتبر است</string>
  <string name="ws_error_REPO_4">نام انتخابی برای فروشگاه معتبر نیست. در نام فروشگاه، فقط مجاز به
    استفاده از حروف، اعداد و
    خط فاصله هستید.
  </string>
  <string name="ws_error_REPO_7">یک فروشگاه با این نام کاربری پیش‌تر به ثبت رسیده است.</string>
  <string name="ws_error_REPO_5">يجب أن تكون اسم المتجر من ثلاثة احرف على الأقل.</string>
  <string name="ws_error_REPO_6">این نام قبلاً انتخاب شده است. برای فروشگاه خود نام دیگری
    انتخاب کنید.
  </string>
  <string name="ws_eror_WOP_">نام انتخابی برای فروشگاه شما نامعتبر است. نام فروشگاه می‌تواند شامل
    حروف، اعداد و خط فاصله باشد. خط فاصله نمی‌تواند در ابتدا و انتهای نام فروشگاه قرار گیرد.
  </string>
  <string name="ws_eror_WOP_1">شما با این نام کاربری دارای یک فروشگاه هستید. با یک نام کاربری
    می‌توانید تنها یک فروشگاه ایجاد کنید
  </string>
  <string name="ws_error_WOP_2">نام انتخابی برای فروشگاه شما نامعتبر است. نام فروشگاه می‌تواند شامل
    حروف، اعداد و خط فاصله باشد. خط فاصله نمی‌تواند در ابتدا و انتهای نام فروشگاه قرار گیرد.
  </string>
  <string name="ws_error_WOP_3">نام انتخابی شما پیش‌تر انتخاب شده است. نام دیگری برای فروشگاه خود
    انتخاب کنید.
  </string>
  <string name="ws_error_WOP_9">ایمیل شما در سیستم موجود است</string>
  <string name="ws_error_WOP_10">ایمیل شما هنوز ثبت نام است</string>
  <string name="ws_error_WOP_11">خطا در ساخت فروشگاه. لطفاً دوباره تلاش کنید.</string>
  <string name="ws_error_API_1">عکس انتخاب شده نامعتبر است.</string>
  <string name="ws_error_QUOTA_2">تعداد حساب‌های کاربری ساخته شده در امروز به سقف مجاز روزانه رسیده
    است. اگر نیاز به
    افزایش این محدودیت دارید، با پشتیبانی تماس بگیرید یا فردا کاربرهای بیشتری بسازید
  </string>
  <string name="ws_error_AUTH_1">ایمیل یا رمز ورود را اشتباه وارد کرده‌اید (بر اساس به‌روزرسانی
    نام کاربری)
  </string>
  <string name="user_upload_photo_failed">در حال حاضر ساخت پروفایل شدنی نیست.</string>
  <string name="store_upload_photo_failed">در حال حاضر بارگزاری عکس شما مقدور نیست، ولی فروشگاه با
    موفقیت ساخته شد.
  </string>
  <string name="user_created">حساب کاربری ایجاد شد</string>
  <!-- WIZARD -->
  <string name="wizard_skip">
    <b>رد کردن</b>
  </string>
  <string name="please_wait_upload">برای اتمام بارگذاری کمی تامل کنید…</string>
  <!--Create user fragment-->
  <string name="create_user_title">ساخت حساب کاربری</string>
  <string name="create_user_header">
    <b>حساب کاربری بسازید</b>
    تا بتوانید به برنامه‌ها و بازی‌ها امتیاز دهید، پای آن‌ها نظر بگذارید و برنامه‌های مورد علاقه‌تان
    را با دوستان‌تان به اشتراک بگذارید
  </string>
  <string name="create_user_take_picture">برای حساب کاربری خود عکس بیندازید</string>
  <string name="create_user_random_photo">یا از عکس‌های قبلی خود یکی را انتخاب کنید</string>
  <string name="create_user_choose_username">شناسه کاربری خود را انتخاب کنید</string>
  <string name="create_user_username">اسم المستخدم</string>
  <string name="create_user_hint">در هنگام امتیازدهی، نظر دادن و به اشتراک گذاشتن دیده خواهد شد.
  </string>
  <string name="create_user_create_button">ساخت پروفایل</string>
  <string name="create_user_dialog_camera">عکس انداختن</string>
  <string name="create_user_dialog_gallery">انتخاب از گالری</string>
  <string name="create_user_dialog_cancel">لغو</string>
  <string name="nothing_inserted_store">برای ساخت فروشگاه نامی برای آن انتخاب کنید</string>
  <string name="nothing_inserted_user">برای ساخت پروفایل باید یک شناسه کاربری انتخاب کنید و
    می‌توانید یک عکس هم بارگذاری کنید
  </string>
  <string name="create_user_bad_photo">کیفیت عکس باید حداقل ۳۰۰ در ۳۰۰ پیکسل باشد</string>
  <string name="no_username_inserted">برای ساخت پروفایل باید یک شناسه کاربری انتخاب کنید</string>
  <string name="no_photo_inserted">برای ساخت پروفایل باید یک عکس بارگزاری کنید</string>
  <!--User interests fragment -->
  <string name="user_interests_title">علایق کاربر</string>
  <string name="user_interests_header">
    <b>فهرست علاقمند‌های خود را تکمیل کنید</b>
    تا به شما بهترین برنامه‌ها را پیشنهاد بدهیم
  </string>
  <string name="user_interests_adult_gambling">شرط‌بندی و محتوای بزرگسال</string>
  <string name="user_interests_photography_video">عکاسی و تصویربرداری</string>
  <string name="next">التالي</string>
  <!--Create Store fragment-->
  <string name="create_store_title">فروشگاه خود را بسازید</string>
  <string name="create_store_header">
    <b>فروشگاه خود را بسازید</b>
    و برنامه‌های مورد علاقه‌تان را با دیگران به اشتراک بگذارید.
    <b>به امتحان کردنش می‌ارزد!</b>
  </string>
  <string name="edit_store_header">یک عکس مناسب و یک توضیح مختصر می‌تواند فروشگاه شما را
    دوست‌داشتنی‌تر کند
  </string>
  <string name="create_store_name">برای فروشگاه خود نامی انتخاب کنید %s</string>
  <string name="create_store_name_inserted">نام فروشگاه شما</string>
  <string name="create_store_theme">تِمِ فروشگاه</string>
  <string name="create_store_create">ساخت فروشگاه</string>
  <string name="create_store_skip">رد کردن</string>
  <string name="create_store_choose_image">برای فروشگاه خود تصویری انتخاب کنید</string>
  <string name="create_store_description_title">درباره فروشگاه شما</string>
  <string name="create_store_description_hint">توضیح فروشگاه شما</string>
  <string name="edit_store_title">ویرایش فروشگاه</string>
  <string name="save_edit_store">حفظ</string>
  <string name="upload_dialog_title">بارگزاری عکس</string>
  <string name="upload_dialog_photo">گرفتن یک عکس جدید</string>
  <string name="upload_dialog_gallery">انتخاب از گالری</string>
  <string name="create_store_store_created">فروشگاه ساخته شد</string>
  <!--Public/Private-->
  <string name="create_profile_pub_pri_suc_login">با موفقیت وارد شدید</string>
  <string name="create_profile_pub_pri_suc_login_sub_text">حالا دوستان شما می‌توانند شما را دنبال
    کنند و محتوای اشتراک گذاشته شده شما را ببینند!
  </string>
  <string name="create_profile_pub_pri">تایم‌لاین اپ‌توید</string>
  <string name="create_profile_pub_pri_sub_text_1">به شما امکان دنبال کردن دوستان‌تان را می‌دهد
  </string>
  <string name="create_profile_pub_pri_sub_text_2">در تایم‌لاین پیشنهادها و نظرات خود را با
    دوستان‌تان به اشتراک بگذارید.
  </string>
  <string name="create_profile_pub_pri_sub_text_3">با خصوصی کردن پروفایل خود، امکان اشتراک‌ گذاری را
    از دست می‌دهید.
  </string>
  <string name="create_profile_pub_pri_make_priv">خصوصی کردن پروفایل</string>
  <string name="create_profile_logged_in_activity_title">ورود موفق</string>
  <string name="image_requirements_popup_message">مشکلات عکس انتخاب شده:
  </string>
  <string name="image_requirements_error_min_height">- حداقل ارتفاع از ۶۰۰ پیکسل کمتر است
  </string>
  <string name="image_requirements_error_max_height">- حداکثر ارتفاع از ۱۰۲۴۰ پیکسل بیشتر است
  </string>
  <string name="image_requirements_error_min_width">- حداقل عرض از ۶۰۰ پیکسل کمتر است
  </string>
  <string name="image_requirements_error_max_width">- حداکثر عرض از ۱۰۲۴۰ پیکسل بیشتر است
  </string>
  <string name="image_requirements_error_max_file_size">- حداکثر حجم از ۵ مگابایت بیشتر است
  </string>
  <string name="image_requirements_error_popup_title">الصورة</string>
</resources>