<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

  <Button
      android:id="@+id/button_camera"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:text="@string/create_user_dialog_camera"
      />

  <Button
      android:id="@+id/button_gallery"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:text="@string/create_user_dialog_gallery"
      />

  <Button
      android:id="@+id/button_cancel"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:text="@string/create_user_dialog_cancel"
      />

</LinearLayout>