<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <android.support.design.widget.AppBarLayout
      android:id="@+id/appbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?attr/toolbarTheme"
        />

  </android.support.design.widget.AppBarLayout>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        >

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:src="@drawable/icon_timeline"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="21dp"
          android:text="@string/create_profile_pub_pri"
          android:textColor="@color/default_color"
          android:textSize="19sp"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="13dp"
          android:text="@string/create_profile_pub_pri_sub_text_1"
          android:textAlignment="center"
          android:textColor="@color/create_store_hint_color"
          android:textSize="14sp"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="13dp"
          android:text="@string/create_profile_pub_pri_sub_text_2"
          android:textAlignment="center"
          android:textColor="@color/create_store_hint_color"
          android:textSize="14sp"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="13dp"
          android:text="@string/create_profile_pub_pri_sub_text_3"
          android:textAlignment="center"
          android:textColor="@color/create_store_hint_color"
          android:textSize="14sp"
          />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        >

      <Button
          android:id="@+id/logged_in_private_button"
          android:layout_width="0dp"
          android:layout_height="46dp"
          android:layout_marginEnd="23dp"
          android:layout_marginRight="23dp"
          android:layout_marginEnd="23dp"
          android:layout_weight="1"
          android:gravity="center"
          android:text="@string/create_profile_pub_pri_make_priv"
          android:textSize="11sp"
          style="?attr/customButtonWhite"
          />

      <Button
          android:id="@+id/logged_in_continue"
          android:layout_width="0dp"
          android:layout_height="46dp"
          android:layout_weight="1"
          android:text="@string/continue_option"
          style="?attr/customButton"
          />

    </LinearLayout>
  </LinearLayout>
</LinearLayout>