<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?attr/toolbarTheme"
        />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/create_user_header_textview"
        android:layout_width="match_parent"
        android:layout_height="73.3dp"
        android:layout_centerHorizontal="true"
        android:background="#c16114"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:paddingRight="23dp"
        android:text="@string/create_user_header"
        />
        <!--android:layout_alignParentTop="true"-->

    <LinearLayout
        android:id="@+id/create_user_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/create_user_header_textview"
        android:layout_alignParentLeft="true"
        >

      <RelativeLayout
          android:id="@+id/create_user_image_action"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          >

        <ImageView
          android:id="@+id/create_user_image"
          android:layout_width="120dp"
          android:layout_height="120dp"
          app:srcCompat="@drawable/create_user_avatar"
          android:layout_marginLeft="12dp"
          android:layout_marginTop="20dp"
          />

        <ImageView
            android:layout_width="33.3dp"
            android:layout_height="33.3dp"
            android:background="@drawable/create_user_camera_background_shape"
            android:src="@drawable/create_user_camera"
            android:layout_alignBottom="@+id/create_user_image"
            android:layout_alignRight="@+id/create_user_image"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            />

      </RelativeLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

      <TextView
          android:id="@+id/create_user_take_picture_text"
          android:layout_width="96dp"
          android:layout_height="33dp"
          android:layout_marginTop="48.7dp"
          android:layout_marginLeft="57dp"
          android:layout_marginRight="63dp"
          android:textAlignment="center"
          android:textStyle="normal|bold"
          android:textColor="@color/create_store_title_color"
          android:text="@string/create_user_take_picture"
          android:gravity="center_vertical"
          />

        <TextView
            android:id="@+id/create_user_random_photo"
            android:layout_width="98dp"
            android:layout_height="12dp"
            android:layout_marginLeft="56.3dp"
            android:layout_marginRight="62.3dp"
            android:layout_marginTop="21dp"
            android:textSize="10.3sp"
            android:textColor="#a9a9a9"
            android:text="@string/create_user_random_photo"
            android:visibility="gone"
            />

      </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="36.3dp"
        android:layout_below="@id/create_user_images"
        android:orientation="vertical"
        >

      <TextView
          android:id="@+id/create_user_choose_username"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="200.3dp"
          android:textSize="13.9sp"
          android:textColor="@color/create_store_title_color"
          android:text="@string/create_user_choose_username"
          />

      <EditText
          android:id="@+id/create_user_username_inserted"
          android:layout_width="match_parent"
          android:layout_height="43.3dp"
          android:layout_marginTop="8.7dp"
          android:background="@color/create_store_edit_text_background"
          android:textColor="@color/create_store_edit_text_color"
          android:text="@string/create_user_username"
          android:layout_marginRight="15dp"
          />

      <TextView
          android:layout_marginTop="10.3dp"
          android:layout_width="230.3dp"
          android:layout_height="9.7dp"
          android:textSize="9.8sp"
          android:textColor="@color/create_store_hint_color"
          android:text="@string/create_user_hint"
          />

    </LinearLayout>

    </LinearLayout>

      <Button
          android:id="@+id/create_user_create_profile"
          android:layout_width="152dp"
          android:layout_height="45dp"
          android:layout_alignParentBottom="true"
          android:layout_alignParentRight="true"
          android:layout_marginRight="15dp"
          android:layout_marginBottom="20dp"
          android:text="@string/create_user_create_button"
          />
  </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>