<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <android.support.v7.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:theme="?attr/toolbarTheme"
          />

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          >

        <TextView
            android:id="@+id/create_user_header_textview"
            android:layout_width="match_parent"
            android:layout_height="73.3dp"
            android:layout_centerHorizontal="true"
            android:background="#c16114"
            android:gravity="center_vertical"
            android:paddingLeft="24dp"
            android:paddingRight="23dp"
            android:text="@string/create_user_header"
            android:textColor="@color/white"
            />


        <LinearLayout
            android:id="@+id/create_user_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/create_user_header_textview"
            android:orientation="horizontal"
            >

          <RelativeLayout
              android:id="@+id/create_user_image_action"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              >

            <ImageView
                android:id="@+id/create_user_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/create_user_avatar"
                />

            <ImageView
                android:layout_width="33.3dp"
                android:layout_height="33.3dp"
                android:layout_alignBottom="@+id/create_user_image"
                android:layout_alignRight="@+id/create_user_image"
                android:background="@drawable/create_user_camera_background_shape"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:src="@drawable/create_user_camera"
                />

          </RelativeLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              >

            <TextView
                android:id="@+id/create_user_take_picture_text"
                android:layout_width="96dp"
                android:layout_height="33dp"
                android:layout_marginLeft="57dp"
                android:layout_marginRight="63dp"
                android:layout_marginTop="48.7dp"
                android:gravity="center_vertical"
                android:text="@string/create_user_take_picture"
                android:textAlignment="center"
                android:textColor="@color/create_store_title_color"
                android:textStyle="normal|bold"
                />

            <TextView
                android:id="@+id/create_user_random_photo"
                android:layout_width="98dp"
                android:layout_height="12dp"
                android:layout_marginLeft="56.3dp"
                android:layout_marginRight="62.3dp"
                android:layout_marginTop="21dp"
                android:text="@string/create_user_random_photo"
                android:textColor="#a9a9a9"
                android:textSize="10.3sp"
                android:visibility="gone"
                />

          </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_user_images"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="36.3dp"
            android:orientation="vertical"
            >

          <TextView
              android:id="@+id/create_user_choose_username"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/create_user_choose_username"
              android:textColor="@color/create_store_title_color"
              android:textSize="14sp"
              />

          <EditText
              android:id="@+id/create_user_username_inserted"
              android:layout_width="match_parent"
              android:layout_height="43dp"
              android:layout_marginRight="15dp"
              android:layout_marginTop="8.7dp"
              android:background="@color/create_store_edit_text_background"
              android:hint="@string/create_user_username"
              android:padding="8dp"
              android:paddingLeft="12dp"
              android:textColor="@color/black"
              android:textSize="12sp"
              />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10.3dp"
              android:text="@string/create_user_hint"
              android:textColor="@color/create_store_hint_color"
              android:textSize="9.8sp"
              />

        </LinearLayout>
      </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:gravity="top|center_horizontal"
        android:orientation="horizontal"
        >

      <!--fake space-->
      <Button
          android:layout_width="152dp"
          android:layout_height="46dp"
          android:visibility="invisible"
          style="?attr/customButton"
          />

      <Button
          android:id="@+id/create_user_create_profile"
          android:layout_width="152dp"
          android:layout_height="46dp"
          android:layout_marginRight="15dp"
          android:text="@string/create_user_create_button"
          style="?attr/customButton"
          />
    </LinearLayout>

  </LinearLayout>

</android.support.design.widget.CoordinatorLayout>